# hw_1

./: CMakeLists.txt  main.cpp  terrorist.cpp  terrorist.h  tests.cpp
.github/workflows/: githubactions.yaml
test_files/test1/: 1.txt.mod  2.txt.mod
test_files/test1_copy/: 1.txt
